--- a/inst/ChangeLog
+++ b/inst/ChangeLog
@@ -1,5 +1,8 @@
 detect package version history
 
+Version 0.3-3, May 15, 2015
+    * load_BAM_QPAD function is deprecated.
+
 Version 0.3-2, May 15, 2014
     * Bugfix in cmulti2.fit: n was undefined (reported by Julie Hart).
     * Bugfix in hbootindex: n was not set when strata was missing.
