--- a/extras/clpl/clpl.Rmd
+++ b/extras/clpl/clpl.Rmd
@@ -48,7 +48,7 @@ $$ P(W=1) = (1-\phi) [1 - f(0; \hat{\theta}^{(1)})]$$
 
 $$ P(Y=y) = I(y=0) \phi + (1 - \phi) f(y; \theta) $$
 
-# Distributions
+# Implemented distributions
 
 ## Poisson
 
@@ -63,10 +63,6 @@ $u \sim Gamma(mean=1, variance=\gamma)$):
 
 $$ f(y; \theta) = f(y; \lambda,\gamma) = \frac{\Gamma (y + \gamma^{-1})}{\Gamma (\gamma^{-1})} \frac{(\gamma \lambda)^{y}}{(1+\gamma \lambda)^{(y + \gamma{-1})}} $$
 $$ P(Y=0) = \phi + (1 + \phi) (1+\gamma \lambda)^{(\gamma{-1})} $$
-
-## Geometric
-
-To be added...
 
 ## Binomial 
 
@@ -91,17 +87,37 @@ $$ P(Y=0) = \phi $$
 
 Because $f(0; \theta)=0$ it follows that $P(Y=y \mid Y>0)=f(y;\theta)$.
 
-## Gamma
-
-To be added...
-
-## Exponential
-
-To be added...
-
 # Limitations
 
 What to do with categorical predictors where all observations are 0?
 An option is to merge that factor level with similar one(s)
 that have >0 observations.
 
+# Wishlist
+
+## Gamma
+
+To be added, but see [this](http://civil.colorado.edu/~balajir/CVEN6833/lectures/GammaGLM-01.pdf) first.
+It is not totally how to best parametrize it and what link function to use.
+Both log and inverse link leads to non-finite results for $y=0$.
+I guess the point here should be that we condition on the zeroes, so
+it shouldn't matter, and link function is only needed to scale
+the predictions right.
+
+$\gamma$ is Gamma variance, $\mu$ is Gamma mean, $y \geq 0$ 
+(shape: $a=\mu^2/\gamma$, scale: $s=\gamma/\mu$):
+
+$$ f(y; \theta) = f(y; \mu,\gamma) = \frac{1}{(\gamma/\mu)^{\mu^2/\gamma} \Gamma(\mu^2/\gamma)} y^{(\mu^2/\gamma)-1} e^{-y (\mu/\gamma)}$$
+$$ P(Y=0) = \phi + (1 + \phi) f(y=0; \theta)$$
+
+$f(y=0; \theta)$ is also funni analytically, because the exponential term
+with $y$ in it leads to 1 (which is fine), but the $y^{(\mu^2/\gamma)-1}$
+is tricky (can be 0, 1, $\infty$). Leave this for another day.
+
+## Geometric
+
+Maybe some day.
+
+## Exponential
+
+Maybe some day.
